[project]
name = "pdm-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "chuck", email = "tengchenc@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "pydash>=5.1.0",
]
requires-python = ">=3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = {cmd = "python3 main.py"}
